# matrix-manage

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: github_workflows_cross-platform-release.yml
include/: Determinant.hpp  Matrix.hpp  decimalToFraction.hpp  safe_input.hpp  shape.hpp
src/: Determinant.cpp  Matrix.cpp  decimalToFraction.cpp  main.cpp  shape.cpp
